[Tickets:13722][Version:1.7.6] Fixed icon alignment.
git-svn-id: https://teamsupport.svn.beanstalkapp.com/main/trunk@1258 02885c34-e171-44ab-8435-42fb7a3c3aaf

--- a/WebApp/Resources/Pages/Ticket.css
+++ b/WebApp/Resources/Pages/Ticket.css
@@ -198,4 +198,5 @@
       width: 24px;
       height: 24px;
       float: left;
+      margin-top: -4px;
     }
